--- a/_config.yml
+++ b/_config.yml
@@ -72,20 +72,6 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-<<<<<<< HEAD
-github_username: wenwenkong # your GitHub user name
-gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
-linkedin_username: wenwenkong # your LinkedIn user name
-scholar_userid: UDAPrT8AAAAJ # your Google Scholar ID
-orcid_id: # your ORCID ID
-medium_username: # your Medium username
-quora_username: # your Quora username
-publons_id: Y-8516-2019 # your ID on Publons
-research_gate_profile: # your profile on ResearchGate
-blogger_url: # your blogger URL
-work_url: # work page URL
-=======
 acm_id: # your dl.acm.org/profile/id
 blogger_url: # your blogger URL
 bluesky_url: # your bluesky URL
@@ -93,26 +79,25 @@ dblp_url: # your DBLP profile url
 discord_id: # your discord id (18-digit unique numerical identifier)
 facebook_id: # your facebook id
 flickr_id: # your flickr id
-github_username: # your GitHub user name
+github_username: wenwenkong # your GitHub user name
 gitlab_username: # your GitLab user name
 ieee_id: # your ieeexplore.ieee.org/author/id
-inspirehep_id: 1010907 # Inspire HEP author ID
+inspirehep_id: # Inspire HEP author ID
 instagram_id: # your instagram id
 kaggle_id: # your kaggle id
->>>>>>> upstream/main
 keybase_username: # your keybase user name
 lastfm_id: # your lastfm id
 lattes_id: # your ID on Lattes (Brazilian Lattes CV)
-linkedin_username: # your LinkedIn user name
+linkedin_username: wenwenkong # your LinkedIn user name
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 medium_username: # your Medium username
 orcid_id: # your ORCID ID
 osf_id: # your OSF ID
 pinterest_id: # your pinterest id
-publons_id: # your ID on Publons
+publons_id: Y-8516-2019 # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
+scholar_userid: UDAPrT8AAAAJ # your Google Scholar ID
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
@@ -150,14 +135,9 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-<<<<<<< HEAD
 blog_name: # blog_name will be displayed in your blog page
 blog_nav_title: Posts # your blog must have a title for it to be displayed in the nav bar
 #blog_description: 
-=======
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
->>>>>>> upstream/main
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -191,18 +171,13 @@ disqus_shortname: al-folio # put your disqus shortname
 # External sources.
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
-<<<<<<< HEAD
 # external_sources:
-#   - name: medium.com
-#     rss_url: https://medium.com/@al-folio/feed
-=======
-external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
-  - name: Google Blog
-    posts:
-      - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-        published_date: 2024-05-14
+  # - name: medium.com
+    # rss_url: https://medium.com/@al-folio/feed
+  # - name: Google Blog
+    # posts:
+      # - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
+        # published_date: 2024-05-14
 
 # -----------------------------------------------------------------------------
 # Newsletter
@@ -212,7 +187,6 @@ newsletter:
   enabled: false
   endpoint: # your loops endpoint (e.g., https://app.loops.so/api/newsletter-form/YOUR-ENDPOINT)
   # https://loops.so/docs/forms/custom-form
->>>>>>> upstream/main
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -228,10 +202,6 @@ collections:
     output: true
     permalink: /:collection/:title/
 
-<<<<<<< HEAD
-news_scrollable: true # adds a vertical scroll bar if there are more than 3 news items
-news_limit: # 5 # leave blank to include all the news in the `_news` folder
-=======
 announcements:
   enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
@@ -240,8 +210,7 @@ announcements:
 latest_posts:
   enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
-  limit: 3 # leave blank to include all the blog posts
->>>>>>> upstream/main
+  limit: 5 # leave blank to include all the blog posts
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
@@ -339,12 +308,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-<<<<<<< HEAD
-display_tags: ['statistics', 'climate'] # this tags will be dispalyed on the front page of your blog
-=======
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
->>>>>>> upstream/main
+display_tags: ['statistics', 'climate'] # these tags will be displayed on the front page of your blog
+# display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
@@ -411,13 +376,8 @@ filtered_bibtex_keywords:
   ]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
-<<<<<<< HEAD
-max_author_limit: #3  # leave blank to always show all authors
-more_authors_animation_delay: # 10  # more authors are revealed on click using animation; smaller delay means faster animation
-=======
-max_author_limit: 3 # leave blank to always show all authors
-more_authors_animation_delay: 10 # more authors are revealed on click using animation; smaller delay means faster animation
->>>>>>> upstream/main
+max_author_limit: # leave blank to always show all authors
+more_authors_animation_delay: # more authors are revealed on click using animation; smaller delay means faster animation
 
 # Enables publication thumbnails. If disabled, none of the publications will display thumbnails, even if specified in the bib entry.
 enable_publication_thumbnails: true
