--- a/_config.yml
+++ b/_config.yml
@@ -136,7 +136,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: # blog_name will be displayed in your blog page
-blog_nav_title: Posts # your blog must have a title for it to be displayed in the nav bar
+blog_nav_title: Notes # your blog must have a title for it to be displayed in the nav bar
 #blog_description: 
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
@@ -146,7 +146,7 @@ pagination:
   enabled: true
 
 related_blog_posts:
-  enabled: true
+  enabled: false
   max_related: 5
 
 # Giscus comments (RECOMMENDED)
@@ -208,7 +208,7 @@ announcements:
   limit: 5 # leave blank to include all the news in the `_news` folder
 
 latest_posts:
-  enabled: true
+  enabled: false
   scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
   limit: 5 # leave blank to include all the blog posts
 
