--- a/_config.yml
+++ b/_config.yml
@@ -4,23 +4,22 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Wenwen
-middle_name: 
+middle_name:
 last_name: Kong
-#email: 
+#email:
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   # add description here if you want
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
-
+keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: # ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://wenwenkong.github.io # the base hostname & protocol for your site
 baseurl: #/al-folio/ # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
-impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 #Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 back_to_top: true # set to false to disable the back to top button
 
@@ -114,7 +113,6 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
- 
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -137,7 +135,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 
 blog_name: # blog_name will be displayed in your blog page
 blog_nav_title: Notes # your blog must have a title for it to be displayed in the nav bar
-#blog_description: 
+#blog_description:
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -172,12 +170,12 @@ disqus_shortname: al-folio # put your disqus shortname
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
 # external_sources:
-  # - name: medium.com
-    # rss_url: https://medium.com/@al-folio/feed
-  # - name: Google Blog
-    # posts:
-      # - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-        # published_date: 2024-05-14
+# - name: medium.com
+# rss_url: https://medium.com/@al-folio/feed
+# - name: Google Blog
+# posts:
+# - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
+# published_date: 2024-05-14
 
 # -----------------------------------------------------------------------------
 # Newsletter
@@ -308,7 +306,7 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ['statistics', 'climate'] # these tags will be displayed on the front page of your blog
+display_tags: ["statistics", "climate"] # these tags will be displayed on the front page of your blog
 # display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
