--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
   "devDependencies": {
     "@shopify/prettier-plugin-liquid": "1.4.0",
+    "husky": "^8.0.0",
     "prettier": "3.1.1"
+  },
+  "scripts": {
+    "prepare": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{html,md,yml}": [
+      "prettier --write"
+    ]
   }
 }
