--- a/_config.yml
+++ b/_config.yml
@@ -306,7 +306,7 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["statistics", "climate"] # these tags will be displayed on the front page of your blog
+display_tags: ["statistics", "climate", "llm", "machine-learning"] # these tags will be displayed on the front page of your blog
 # display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
